# History-AI

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  history_ai.db  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: ai.py  cards.py
backend/app/core/: config.py
backend/app/crud/: crud_card.py
backend/app/db/: base.py  models.py  session.py
backend/app/schemas/: ai.py  card.py
backend/app/services/: ai_service.py  card_service.py
backend/tests/: test_main.py
frontend/: README.md  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(main)/: layout.tsx  page.tsx
frontend/app/(main)/cards/[id]/: loading.tsx  page.tsx
frontend/app/main/: layout.tsx  page.tsx
frontend/components/: header.tsx
frontend/components/ai/: copilot-popup.tsx
frontend/components/cards/: add-card-dialog.tsx  blog-card-content.tsx  card-preview.tsx
frontend/components/layout/: header.tsx  search-panel.tsx
frontend/components/ui/: dialog.tsx
frontend/layout/: header.tsx  search-panel.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/lib/: api.ts  validators.ts
frontend/store/: app-store.ts
